--- a/app/views/gists/index.html.erb
+++ b/app/views/gists/index.html.erb
@@ -15,7 +15,7 @@
   <tbody>
     <% @gists.each do |gist| %>
       <tr>
-        <td><%= gist.snippet %></td>
+        <%= raw Pygments.highlight(gist.snippet, lexer: gist.lang) %>
         <td><%= gist.lang %></td>
         <td><%= gist.description %></td>
         <td><%= link_to 'Show', gist %></td>
