--- a/app/views/gists/show.html.erb
+++ b/app/views/gists/show.html.erb
@@ -2,8 +2,8 @@
 
 <p>
   <strong>Snippet:</strong>
-  <%= @gist.snippet %>
 </p>
+<%= raw Pygments.highlight(@gist.snippet, lexer: @gist.lang) %>
 
 <p>
   <strong>Lang:</strong>
