poustawianie bloków, zmiana wyglądu

--- a/app/views/gists/index.html.erb
+++ b/app/views/gists/index.html.erb
@@ -1,31 +1,25 @@
-<h1>Listing gists</h1>
+<!--<h1># listing gists</h1>-->
+<img src="http://waxs.org/wp-content/uploads/2014/01/Programming_OOP_Wallpaper_by_hexeno.png" title="baner"  width="940px" height="400px" style="margin-top:-60px;"/>
 
-<table>
-  <thead>
-    <tr>
-      <th>Snippet</th>
-      <th>Lang</th>
-      <th>Description</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
+	<% @gists.each do |gist| %>
+	<div class="gist">
+		<h1 class="jezyk">Language: <%= gist.lang %></h1>
+		<%= raw Pygments.highlight(gist.snippet, lexer: gist.lang) %>
+			
+		<div>
+			<p class="opis">
+				<%= gist.description %>
+			</p>
+			<p class="przyciski">
+				<%= link_to 'Show', gist %>
+				<%= link_to 'Edit', edit_gist_path(gist) %>
+				<%= link_to 'Destroy', gist, method: :delete, data: { confirm: 'Are you sure?' } %>
+			</p>
+		</div>
+	</div>
+	<hr />
+	<% end %>
 
-  <tbody>
-    <% @gists.each do |gist| %>
-      <tr>
-        <td><%= raw Pygments.highlight(gist.snippet, lexer: gist.lang) %><td>
-        <td><%= gist.lang %></td>
-        <td><%= gist.description %></td>
-        <td><%= link_to 'Show', gist %></td>
-        <td><%= link_to 'Edit', edit_gist_path(gist) %></td>
-        <td><%= link_to 'Destroy', gist, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
+<br />
 
 <%= link_to 'New Gist', new_gist_path %>
