--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -2,20 +2,23 @@ body {
   background-color: #fff;
   color: #333;
   font-family: verdana, arial, helvetica, sans-serif;
-  font-size: 18px;
-  line-height: 18px;
+  font-size: 62.5%;
+  line-height: 1rem;
+  max-width:940px;
+  padding:3rem;
+  margin:0 auto;
 }
 
 p, ol, ul, td {
   font-family: verdana, arial, helvetica, sans-serif;
-  font-size: 13px;
-  line-height: 18px;
+  font-size: 1.4rem;
+  line-height: 1.8rem;
 }
 
 pre {
   background-color: #eee;
-  padding: 10px;
-  font-size: 11px;
+  padding: 1.0rem;
+  font-size: 1.1rem;
 }
 
 a {
@@ -31,7 +34,7 @@ a {
 
 div {
   &.field, &.actions {
-    margin-bottom: 10px;
+    margin-bottom: 1.0rem;
   }
 }
 
@@ -40,30 +43,34 @@ div {
 }
 
 .field_with_errors {
-  padding: 2px;
+  padding: 0.2rem;
   background-color: red;
   display: table;
 }
 
 #error_explanation {
-  width: 450px;
-  border: 2px solid red;
-  padding: 7px;
+  width: 45rem;
+  border: 0.2rem solid red;
+  padding: 0.7rem;
   padding-bottom: 0;
-  margin-bottom: 20px;
+  margin-bottom: 2rem;
   background-color: #f0f0f0;
   h2 {
     text-align: left;
     font-weight: bold;
-    padding: 5px 5px 5px 15px;
-    font-size: 12px;
-    margin: -7px;
-    margin-bottom: 0px;
+    padding: 0.5rem 0.5rem 0.5rem 1.5rem;
+    font-size: 1.2rem;
+    margin: -0.7rem;
+    margin-bottom: 0;
     background-color: #c00;
     color: #fff;
   }
   ul li {
-    font-size: 12px;
+    font-size: 1.2rem;
     list-style: square;
   }
+}
+
+.przyciski{
+  text-align:right;
 }
