--- a/app/views/gists/index.html.erb
+++ b/app/views/gists/index.html.erb
@@ -1,13 +1,17 @@
-<!--<h1># listing gists</h1>-->
 <img src="http://waxs.org/wp-content/uploads/2014/01/Programming_OOP_Wallpaper_by_hexeno.png" title="baner"  width="940px" height="400px" style="margin-top:-60px;"/>
 
 <div id="my-gists">
 	<%= render @gists %>
 </div>
 <div id="infinite-scrolling">
-  <%= will_paginate @gists %>
+	<%= will_paginate @gists, renderer: BootstrapPagination::Rails%>
 </div>
 
 <br />
 
-<%= link_to 'New Gist', new_gist_path %>
+<div id="newGist">
+	<div>
+		<h1># listing gists</h1>
+		<%= link_to 'New Gist', new_gist_path %>
+	</div>
+</div>
