--- a/app/views/gists/_gist.html.erb
+++ b/app/views/gists/_gist.html.erb
@@ -8,8 +8,8 @@
 				<%= gist.description %>
 			</p>
 			<p class="przyciski">
-				<%= link_to 'Show', gist %>
-				<%= link_to 'Edit', edit_gist_path(gist) %>
+				<%= link_to 'Show', gist %> |
+				<%= link_to 'Edit', edit_gist_path(gist) %> |
 				<%= link_to 'Destroy', gist, method: :delete, data: { confirm: 'Are you sure?' } %>
 			</p>
 		</div>
