--- a/app/views/gists/index.html.erb
+++ b/app/views/gists/index.html.erb
@@ -1,17 +1,23 @@
+
 <img src="http://waxs.org/wp-content/uploads/2014/01/Programming_OOP_Wallpaper_by_hexeno.png" title="baner"  width="940px" height="400px" style="margin-top:-60px;"/>
+
+
+<div id="infinite-scrolling">
+	<%= will_paginate @gists, renderer: BootstrapPagination::Rails%>
+</div>
+<div id="newGist">
+	<div id="naglowek">
+	<h1 id="listGist"># listing gists</h1>
+	
+	<%= link_to 'New Gist', new_gist_path %>
+	</div>
+</div>
+
+
 
 <div id="my-gists">
 	<%= render @gists %>
 </div>
-<div id="infinite-scrolling">
-	<%= will_paginate @gists, renderer: BootstrapPagination::Rails%>
-</div>
 
 <br />
 
-<div id="newGist">
-	<div>
-		<h1># listing gists</h1>
-		<%= link_to 'New Gist', new_gist_path %>
-	</div>
-</div>
