--- a/app/views/gists/index.html.erb
+++ b/app/views/gists/index.html.erb
@@ -1,5 +1,5 @@
 
-<img src="http://waxs.org/wp-content/uploads/2014/01/Programming_OOP_Wallpaper_by_hexeno.png" title="baner"  width="940px" height="400px" style="margin-top:-60px;"/>
+<img class="baner" src="http://waxs.org/wp-content/uploads/2014/01/Programming_OOP_Wallpaper_by_hexeno.png" title="baner" style="margin-top:-60px;"/>
 
 
 <div id="infinite-scrolling">
