--- a/app/views/gists/_form.html.erb
+++ b/app/views/gists/_form.html.erb
@@ -1,29 +1,45 @@
 <%= form_for(@gist) do |f| %>
-  <% if @gist.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@gist.errors.count, "error") %> prohibited this gist from being saved:</h2>
+<% if @gist.errors.any? %>
+<div id="error_explanation">
+	<h2><%= pluralize(@gist.errors.count, "error") %> prohibited this gist from being saved:</h2>
 
-      <ul>
-      <% @gist.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+	<ul>
+		<% @gist.errors.full_messages.each do |msg| %>
+		<li>
+			<%= msg %>
+		</li>
+		<% end %>
+	</ul>
+</div>
+<% end %>
 
-  <div class="field">
-    <%= f.label :snippet %><br>
-    <%= f.text_area :snippet %>
-  </div>
-  <div class="field">
-    <%= f.label :lang %><br>
-    <%= f.select :lang, Pygments.lexers.sort.map{|key, value| [ value[:name], value[:aliases][0] ] }, {} %>
-  </div>
-  <div class="field">
-    <%= f.label :description %><br>
-    <%= f.text_field :description %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+<div class="gist">
+	<div class="snipet">
+		<%= f.label :snippet %>
+		<br>
+		<%= f.text_area :snippet %>
+	</div>
+	<div id="edit2">
+		<div class="field">
+			<%= f.label :description %>
+			<br>
+			<%= f.text_field :description %>
+		</div>
+		<div class="field-lang">
+			<br>
+			<%= f.label :lang %>
+			<br>
+			<%= f.select :lang, Pygments.lexers.sort.map{|key, value| [ value[:name], value[:aliases][0] ] }, {} %>
+		</div>
+
+		<p class="actions">
+			<%= link_to image_tag("http://www.prestagraphics.com/images/loupe.png", {:alt=>"Show", :title=>"Show"}) , @gist, :class => 'showGist'  %>
+			<%= link_to image_tag("http://www.zielski.com.pl/pliki/grafika/ikony/back.png", {:alt=>"Back", :title=>"Back"}) , gists_path, :class => 'editGist' %>
+			
+			<%= image_submit_tag("http://m16c.cco-ev.de/uploads/pics/save_icon_04.gif") %></p>
+		</p>
+	</div>
+</div>
+<hr>
+
 <% end %>
