--- a/app/views/gists/index.html.erb
+++ b/app/views/gists/index.html.erb
@@ -1,23 +1,39 @@
 
-<img class="baner" src="http://waxs.org/wp-content/uploads/2014/01/Programming_OOP_Wallpaper_by_hexeno.png" title="baner" style="margin-top:-60px;"/>
-
 
 <div id="infinite-scrolling">
 	<%= will_paginate @gists, renderer: BootstrapPagination::Rails%>
 </div>
 <div id="newGist">
 	<div id="naglowek">
-	<h1 id="listGist"># listing gists</h1>
-	
-	<%= link_to 'New Gist', new_gist_path %>
+
+		<%= link_to 'New Gist', new_gist_path %>
 	</div>
 </div>
+<p id="notice">
+	<%= notice %>
+</p>
 
-
-
+<%= form_tag @gist, :method => 'get' do %>
+<div id="search-box">
+	<div class="input-lang">
+		<%= select_tag :lang_search, options_for_select(Pygments.lexers.sort.map{|key, value| [ value[:name], value[:aliases][0] ] }), include_blank: true, class: "form-control" %>
+	</div>
+	<div class="input-snippet">
+		<%= text_field_tag :snippet_search, params[:snippet_search], class: "form-control", placeholder: "Snippet" %>
+	</div>
+	<div class="input-desc">
+		<%= text_field_tag :desc_search, params[:desc_search], class: "form-control", placeholder: "Description" %>
+	</div>
+	<div class="input-search">
+		<div class="btn-group btn-group-lg">
+			<%= submit_tag "Search", :type => "submit", class: "btn btn-info" %>
+		</div>
+	</div>
+</div>
+<% end %>
 <div id="my-gists">
 	<%= render @gists %>
-	
+
 </div>
 
 <br />
