--- a/app/views/gists/show.html.erb
+++ b/app/views/gists/show.html.erb
@@ -1,25 +1,25 @@
-<img src="http://waxs.org/wp-content/uploads/2014/01/Programming_OOP_Wallpaper_by_hexeno.png" title="baner"  width="940px" height="400px" style="margin-top:-60px;"/>
+<div class="gist">
+	<h1>Gists show</h1>
+	<div class="snipet snipet-a">
+		<p>
+			<strong>Snippet:</strong>
+		</p>
+		<%= raw Pygments.highlight(@gist.snippet, lexer: @gist.lang) %>
+	</div>
+	<div id="edit2">
+		<div class="field">
+			<strong>Description:</strong>
+			<%= @gist.description%>
+		</div>
+		<div class="field-lang">
+			<strong>Lang:</strong>
+			<%= @gist.lang %>
+		</div>
 
-<p id="notice">
-	<%= notice %>
-</p>
-
-<p>
-	<strong>Snippet:</strong>
-</p>
-<%= raw Pygments.highlight(@gist.snippet, lexer: @gist.lang) %>
-
-<p>
-	<strong>Lang:</strong>
-	<%= @gist.lang %>
-</p>
-
-<p>
-	<strong>Description:</strong>
-	<%= @gist.description%>
-</p>
-<p class="przyciski">
-	<%= link_to 'Edit', edit_gist_path(@gist) %> |
-	<%= link_to 'Back', gists_path %>
-</p>
-<hr />
+		<p class="actions">
+			<%= link_to image_tag("http://www.bobruiskmebel.com/Resources/edit2e.png", {:alt=>"Edit", :title=>"Edit"}) , edit_gist_path(@gist), :class => 'editGist' %>
+			<%= link_to image_tag("http://www.zielski.com.pl/pliki/grafika/ikony/back.png", {:alt=>"Back", :title=>"Back"}) , gists_path, :class => 'editGist' %>
+		</p>
+	</div>
+</div>
+<hr>
