31-40 view, new, tests

--- a/app/views/gists/_form.html.erb
+++ b/app/views/gists/_form.html.erb
@@ -36,7 +36,7 @@
 			<%= link_to image_tag("http://www.prestagraphics.com/images/loupe.png", {:alt=>"Show", :title=>"Show"}) , @gist, :class => 'showGist'  %>
 			<%= link_to image_tag("http://www.zielski.com.pl/pliki/grafika/ikony/back.png", {:alt=>"Back", :title=>"Back"}) , gists_path, :class => 'editGist' %>
 			
-			<%= image_submit_tag("http://m16c.cco-ev.de/uploads/pics/save_icon_04.gif") %></p>
+			<%= image_submit_tag("http://m16c.cco-ev.de/uploads/pics/save_icon_04.gif", {:alt=>"Save", :title=>"Save"}) %></p>
 		</p>
 	</div>
 </div>
