--- a/app/views/gists/_gist.html.erb
+++ b/app/views/gists/_gist.html.erb
@@ -19,8 +19,10 @@
 			</p>
 			<p class="przyciski">
 				<%= link_to image_tag("http://www.prestagraphics.com/images/loupe.png", {:alt=>"Show", :title=>"Show"}) , gist, :class => 'showGist'  %>
-				<%= link_to image_tag("http://www.bobruiskmebel.com/Resources/edit2e.png", {:alt=>"Edit", :title=>"Edit"}) , edit_gist_path(gist), :class => 'editGist' %>
-				<%= link_to image_tag("http://kl1p.com/images/kl1p/delete.png", {:alt=>"Delete", :title=>"Delete"}) , gist, method: :delete, data: { confirm: 'Are you sure?' }, :class => 'deleteGist' %>
+				<% if user_signed_in? %>
+					<%= link_to image_tag("http://www.bobruiskmebel.com/Resources/edit2e.png", {:alt=>"Edit", :title=>"Edit"}) , edit_gist_path(gist), :class => 'editGist' %>
+					<%= link_to image_tag("http://kl1p.com/images/kl1p/delete.png", {:alt=>"Delete", :title=>"Delete"}) , gist, method: :delete, data: { confirm: 'Are you sure?' }, :class => 'deleteGist' %>
+				<% end %>
 				
 			</p>
 		</div>
